Fix row spacing on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -12622,5 +12622,5 @@ header.dvhead h1, header.dvhead .h1 {
 }
 
 a.btn.btn-dark {
-  margin: auto 2rem;
+  margin: 1rem 2rem;
 }
